# python_flask_langchain_open_ai_example

./: .gitignore  Dockerfile  Dockerfile.get_package  README.md  app.py  bk.bk  build.sh  docker-compose.yml  examples.py  examples_test.py  lambda_handler.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  response.json  server.py  test_payload.json
my-deployment-package/charset_normalizer-3.1.0.dist-info/: RECORD
my-deployment-package/dataclasses_json-0.5.7.dist-info/: RECORD
my-deployment-package/langchain-0.0.147.dist-info/: METADATA  RECORD
my-deployment-package/numexpr-2.8.4.dist-info/: RECORD
my-deployment-package/tqdm-4.65.0.dist-info/: RECORD
my-deployment-package/yarl-1.9.1.dist-info/: RECORD
package/SQLAlchemy-1.4.48.dist-info/: RECORD
package/aiohttp-3.8.4.dist-info/: RECORD
package/langchain-0.0.143.dist-info/: METADATA  RECORD
package/numexpr-2.8.4.dist-info/: RECORD
package/numpy-1.24.3.dist-info/: RECORD
package/numpy.libs/: libgfortran-daac5196.so.5.0.0
package/openai-0.27.4.dist-info/: RECORD
package/pydantic-1.10.7.dist-info/: RECORD
python/MarkupSafe-2.1.2.dist-info/: RECORD
python/PyYAML-6.0.dist-info/: RECORD
python/charset_normalizer-3.1.0.dist-info/: RECORD
python/frozenlist-1.3.3.dist-info/: RECORD  WHEEL
python/greenlet-2.0.2.dist-info/: RECORD
python/multidict-6.0.4.dist-info/: RECORD
python/numexpr/: version.py
python/pydantic-1.10.7.dist-info/: RECORD
python/tqdm-4.65.0.dist-info/: RECORD
steps/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  9.py  FINAL.py
(+1 files in other folders)
