[tool.poetry]
name = "flask_ai"
version = "0.1.0"
description = ""
authors = ["a <a@a.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
langchain = "^0.0.143"
openai = "^0.27.4"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
